# reis_experimental

./: .gitignore  readme.md
reis_assets/: CMakeLists.txt  package.xml
reis_assets/urdf/: common_materials.xacro
reis_experimental/: CMakeLists.txt  package.xml
reis_resources/: CMakeLists.txt  package.xml
reis_resources/urdf/: common_colours.xacro  common_materials.xacro
reis_rv240_support/: CMakeLists.txt  package.xml
reis_rv240_support/launch/: load_rv240_180.launch  robot_interface_streaming_rv240_180.launch  robot_state_visualize_rv240_180.launch  test_rv240_180.launch
reis_rv240_support/meshes/rv240_180/collision/: base_link.stl  kolben.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_6.stl  zylinder.stl
reis_rv240_support/meshes/rv240_180/visual/: base_link.stl  kolben.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_6.stl  zylinder.stl
reis_rv240_support/tests/: roslaunch_test.xml
reis_rv240_support/urdf/: rv240_180.urdf  rv240_180.xacro  rv240_180_macro.xacro
