<package>
  <name>reis_experimental</name>
  <version>0.1.0</version>
  <description>Experimental packages for Reis manipulators within ROS-Industrial.</description>
  <author>G.A. vd. Hoorn (TU Delft Robotics Institute)</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>TODO</license>

  <url type="website">http://ros.org/wiki/reis_experimental</url>
  <url type="bugtracker">https://github.com/gavanderhoorn/reis_experimental/issues</url>
  <url type="repository">https://github.com/gavanderhoorn/reis_experimental</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>reis_assets</run_depend>
  <run_depend>reis_driver</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
